
    * Stamp sound effects may be in either OGG or WAV format.

    * Stamps may now include a second sound effect, used as a spoken
      description.
      (stampname_desc.ogg or .wav and localized stampname_desc_ll.ogg or .wav)

    * The color palette may now be overridden by creating a text file
      containing color descriptions, and using the "colorfile" option.

  
  * Tool improvements:
    ------------------------
    * Magic Sparkles can now be different colors.

    * Magic Negative, Fade, Darken, Tint and Cartoon all now apply with a
      circular shape, rather than a square.

    * Magic Grass has a sound effect.
    
    * Round erasers added.

    * Brushes may be animated.  (Implements RFE #1522694)
      (Create an image (W*N) x H in size (where N is number of frames),
      then create a ".dat" file for the brush, containing the line "frames=N".

    * Brushes can include directional variations.  (Implements RFE #1522694)
      (Create an image (W*3) x (H*3) in size, then create a ".dat" file
      for the brush, containing the line: "directional".  Each of the 9
      sectors corresponds to 8 different directions, and center.)

    * Brushes can include spacing information.
      (Create a ".dat" file for the brush, containing the line "spacing=N".

  * New Brushes:
    ------------
    * Vines (animated)

    * Angle Lines (directional)

    * Squirrel (animated, directional)
    
    * Kuro Neko ("Black Cat") (animated, directional)
      (Based on the cat from 'xneko' by Masayuki Koba)

  * New Starter Images:
    -------------------
    * Shipwreck
      Jim Trice <jimtrice@linuxmail.org>

    * Tux the farmer
      Jim Trice <jimtrice@linuxmail.org>

    * Street
      Pere Pujal Carabantes <ppujal@airtel.net>

    * Chess board
      (From XBoard: http://tim-mann.org/xboard.html )

    * Nagasaki
      Jim Trice <jimtrice@linuxmail.org>

  * New Translations:
    -----------------
    * Arabic -- includes "ar.ttf" font