@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>September 9, 2006</p>
+<p>September 10, 2006</p>
 </center>
 
 <hr size=2 noshade>
@@ -413,6 +413,10 @@ New Breed Software</p>
     describe the color.  Tux will display this text when the color is
     clicked.  (For example,
     "<code>#FFF&nbsp;White&nbsp;as&nbsp;snow.</code>")</p>
+
+    <p>As an example, you can see the default colors currently
+    used in Tux&nbsp;Paint in:
+    "<a href="default_colors.txt"><code>default_colors.txt</code></a>".</p>
   </dd>
   
   <dt><code><b>lang=<i>LANGUAGE</i></b></code></dt>
